--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
+dash==2.8.0
+dash-bootstrap-components==1.3.1
+dash-daq==0.5.0
+dill==0.3.6
+Flask==2.2.2
+imbalanced-learn==0.10.1
+joblib==1.2.0
+jupyter==1.0.0
+lime==0.2.0.1
+matplotlib==3.6.2
+numpy==1.24.1
+pandas==1.5.2
 pip==22.3.1
-jupyter
-numpy
-pandas
-scikit-learn
-imbalanced-learn
-lime
-tk
-matplotlib
-seaborn
-flask==2.2.2
-requests
-dill
-streamlit
+plotly==5.13.0
+requests==2.28.1
+scikit-learn==1.2.0
+seaborn==0.12.2
+streamlit==1.16.0
